--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="cta">
         <h3>Be the first to know.</h3>
         <form action="#"></form>
-          <input type="text" placeholder="Enter your email address to receive updates"> <input type="button" value="">
+          <input type="text" placeholder="Enter your email address to receive updates"> <input type="button" value="Keep in touch">
      </section>
    </main>
 </body>
