--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
    </header>
    <main>
     <section class="hero">
-      <h2>Film to 
-        Phone</h2>
+      <h2>FILM TO PHONE</h2>
     </section>
     <section class="details">
       <h3>Any cloud, anytime.</h3>
